@@ -14,7 +14,6 @@ from functools import wraps
 
 from sentry import features
 from sentry.models import OrganizationMemberType
-from sentry.plugins import plugins
 from sentry.utils.cache import cached_for_request
 
 
@@ -97,10 +96,6 @@ def can_create_projects(user, team):
     if not is_team_admin(user, team):
         return False
 
-    result = plugins.first('has_perm', user, 'add_project', team)
-    if result is False:
-        return result
-
     return True
 
 
@@ -135,10 +130,6 @@ def can_add_organization_member(user, organization):
     if not is_organization_admin(user, organization):
         return False
 
-    result = plugins.first('has_perm', user, 'add_organization_member', organization)
-    if result is False:
-        return False
-
     return True
 
 
@@ -150,10 +141,6 @@ def can_manage_organization_member(user, member, perm):
 
     # must be an owner of the team
     if not is_organization_admin(user, member.organization):
-        return False
-
-    result = plugins.first('has_perm', user, perm, member)
-    if result is False:
         return False
 
     return True
@@ -178,10 +165,6 @@ def can_remove_project(user, project):
     if not is_project_admin(user, project):
         return False
 
-    result = plugins.first('has_perm', user, 'remove_project', project)
-    if result is False:
-        return False
-
     return True
 
 
@@ -191,10 +174,6 @@ def can_add_project_key(user, project):
         return True
 
     if not is_project_admin(user, project):
-        return False
-
-    result = plugins.first('has_perm', user, 'add_project_key', project)
-    if result is False:
         return False
 
     return True
@@ -210,10 +189,6 @@ def can_edit_project_key(user, key):
     if not is_project_admin(user, project):
         return False
 
-    result = plugins.first('has_perm', user, 'edit_project_key', project, key)
-    if result is False:
-        return False
-
     return True
 
 
@@ -225,10 +200,6 @@ def can_remove_project_key(user, key):
     project = key.project
 
     if not is_project_admin(user, project):
-        return False
-
-    result = plugins.first('has_perm', user, 'remove_project_key', project, key)
-    if result is False:
         return False
 
     return True
